<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Papierr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="star">Star</string>
    <string name="reminder">Set a reminder?</string>
    <string name="pref_title_autosave">Automatic Saving</string>
    <string name="pref_description_autosave">Save file as you type instead of saving when editing has finished. May consume some RAM.</string>
    <string name="delete_note">Delete note?</string>
    <string name="delete_desc">Would you like to permanently remove this note from Papier?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="share_note">Share a note with&#8320;</string>
    <string name="edit_hint">Name</string>
    <string name="delete_content_desc">Delete Note</string>
    <string name="star_content_desc">Star Note</string>
    <string name="share_content_desc">Share Note</string>
    <string name="thank_you">Thank you for installing Papier! Press the plus icon at bottom right to create a new note.</string>
    <string name="got_it">GOT IT</string>
    <string name="welcome">Welcome!</string>
    <string name="pref_title_dark">Dark Colour Scheme</string>
    <string name="pref_description_dark">Give a little rest to the eyes by applying a dark theme. Also recommended on AMOLED screens.</string>
    <string name="notes_tab">Notes</string>
    <string name="lists_tab">Lists</string>

</resources>
